# BeatifulTaskManager

./: .env.example  .gitignore  Makefile  README.md  commit_names.md  docker-compose.test.yml  docker-compose.yml
backend/: .pylintrc  Dockerfile  Readme.md  alembic.ini  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 9c7881a80d52_.py
backend/app/api/: __init__.py
backend/app/api/endpoints/: __init__.py  analytics.py  task.py  user.py
backend/app/api/schemas/: __init__.py  analytics.py  task.py  user.py
backend/app/auth/: __init__.py  dep.py  token.py
backend/app/core/: config.py
backend/app/db/: __init__.py  database.py
backend/app/models/: __init__.py  task.py  users.py
backend/app/oauth/: __init__.py  token.py
backend/app/services/: __init__.py  analytics.py  task.py  user.py
backend/app/utils/: __init__.py  hashing.py  logging.py
backend/tests/: Readme.md  conftest.py  test_main.py
backend/tests/test_app/test_api/test_endpoints/: test_analytics_endpoint.py  test_task_endpoint.py  test_user_endpoints.py
backend/tests/test_app/test_api/test_schemas/: test_analytics_schemas.py  test_user_schemas.py
backend/tests/test_app/test_auth/: test_create_token.py
backend/tests/test_app/test_models/: test_task.py  test_users.py
backend/tests/test_app/test_services/: test_service_analytics.py  test_service_task.py  test_service_user.py  test_user.py
backend/tests/test_app/test_utils/: test_hashing.py
backend/tests/test_oauth/: test_create_token.py
frontend/: Dockerfile  Readme.md  package-lock.json  package.json  (+1 more)
(+25 files in other folders)
