[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Backend for ToDo"
authors = ["Danila Golubev <danila25golubev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.119.0"
uvicorn = "^0.37.0"
pytest = "^8.4.2"
aiohttpx = "^0.0.12"
pytest-cov = "^7.0.0"
pylint = "^4.0.1"
black = "^25.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
